@@ -138,12 +138,12 @@ if ($bc_value) {
 }
 
 if (@unmet) {
-	error(g_('Unmet build dependencies: %s'),
-	      join(' ', map { $_->output() } @unmet));
+	errormsg(g_('Unmet build dependencies: %s'),
+	         join(' ', map { $_->output() } @unmet));
 }
 if (@conflicts) {
-	error(g_('Build conflicts: %s'),
-	      join(' ', map { $_->output() } @conflicts));
+	errormsg(g_('Build conflicts: %s'),
+	         join(' ', map { $_->output() } @conflicts));
 }
 exit 1 if @unmet || @conflicts;
 
