@@ -17,6 +17,8 @@ dpkg (1.18.4) UNRELEASED; urgency=low
     agnostic.
   * Add ‘.gitreview’ to the default dpkg-source ignore lists.
   * Add support for DPKG_MAINTSCRIPT_DEBUG environment variable to dpkg.
+  * Fix dpkg-checkbuilddeps exit code to be 1 instead of a random error value
+    on unsatisfied dependencies. Regression introduced in dpkg 1.18.3.
   * Test suite:
     - Improve perl code test coverage.
   * Build system:
